# stochastic-gherkin-sample

./: .gitignore  .gitmodules
aspirational/: README.md  advanced.feature  basic.feature  steps.py
roulette/: pyproject.toml
roulette/src/roulette/: __init__.py  base.py  fair.py  types.py
roulette/tests/: conftest.py  test_roulette.py  test_stochastic.py
roulette/tests/features/: color_bet.feature  number_bet.feature
roulette/tests/stochastic/: advanced.feature  advanced.stochasticfeature  basic.feature  basic.stochasticfeature
