[project]
name = "roulette"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Roberto Abdelkader Martínez Pérez", email = "robertomartinezp@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
bdd_features_base_dir = "tests/"

[tool.uv.sources]
pytest-bdd = { path = "../pytest-bdd", editable = true }
stochastic-gherkin = { path = "../stochastic-gherkin/python", editable = true }

[dependency-groups]
dev = [
    "pandas>=2.0",
    "pytest>=9.0.2",
    "pytest-bdd",
    "stochastic-gherkin",
]
